<resources>
    <string name="app_name">MidasMobile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="id_input">이메일을 입력해 주세요.</string>
    <string name="pwd_input">비밀번호를 입력해 주세요.</string>
    <string name="age_input">나이를 입력해 주세요.</string>
    <string name="phone_input">모바일번호를 입력해 주세요.</string>
    <string name="rank_input">직급을 입력해 주세요.</string>
    <string name="signup">회원가입</string>
    <string name="logout">로그아웃</string>
    <string name="volunt_search">나에게 맞는 봉사 활동 검색</string>
</resources>
