<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/registerId"
        style="@style/CustomTextView"
        android:hint="@string/id_input"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/registerPwd"
        style="@style/CustomTextView"
        android:hint="@string/pwd_input"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/registerAge"
        style="@style/CustomTextView"
        android:hint="@string/age_input"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/registerPhone"
        style="@style/CustomTextView"
        android:hint="@string/phone_input"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/registerRank"
        style="@style/CustomTextView"
        android:hint="@string/rank_input"
        android:layout_marginTop="50dp"/>

    <ImageView
        android:id="@+id/registerImageView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/signup" />

</LinearLayout>